test/success/match/used_guarded/main.sk
module Main {

enum Foo {
    Bar,
    Baz,
}

fn main() {
    let f = Bar;
    match f {
        Bar if False -> (),
        Bar -> (),
        Baz -> (),
    };
}

}
