test/errors/matchcompile/unused_guarded/main.sk
module Main {

enum Foo {
    Bar,
    Baz,
}

fn main() {
    let f = Bar;
    match f {
        Bar -> (),
        Bar if False -> (),
        Baz -> (),
    };
}

}
